# lista-della-spesa

./: CMakeLists.txt  DataDiScadenza.h  Lista.cpp  Lista.h  Observer.h  Oggetto.cpp  Oggetto.h  README.md  Subject.h  Utente.cpp  Utente.h
test/: CMakeLists.txt  testLista.cpp  testOggetto.cpp  testUtente.cpp
